// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`semantic round-trip (emit -> speculate) > preserves idl/dfn/ref/cite projections for oidc > oidc-emitter-diagnostics 1`] = `[]`;

exports[`semantic round-trip (emit -> speculate) > preserves idl/dfn/ref/cite projections for oidc > oidc-parsed-projection 1`] = `
{
  "cites": [
    "BCP195||0|0|||",
    "DPOP||0|0|||",
    "DPOP||0|0|||",
    "DPOP||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-DISCOVERY||0|0|||",
    "OIDC-DISCOVERY||0|0|||",
    "OIDC-DYNAMIC-CLIENT-REGISTRATION||0|0|||",
    "RFC2119||1|0|||",
    "RFC6749||0|0|||",
    "RFC6749||0|0|||",
    "RFC6749||0|0|||",
    "RFC6749||0|0|||",
    "RFC7517||0|0|||",
    "RFC7519||0|0|||",
    "RFC7591||0|0|||",
    "RFC7636||0|0|||",
    "RFC9110||0|0|||",
    "RFC9207||0|0|||",
    "RFC9700||0|0|||",
    "SOLID-OIDC-PRIMER||0|0|||",
    "SOLID-PROTOCOL||0|0|||",
    "UMA||0|0|||",
    "UMA||0|0|||",
    "WEBID||0|0|||",
  ],
  "definitions": [],
  "idlBlocks": [],
  "references": [],
}
`;

exports[`semantic round-trip (emit -> speculate) > preserves idl/dfn/ref/cite projections for oidc > oidc-source-projection 1`] = `
{
  "cites": [
    "BCP195||0|0|||",
    "DPOP||0|0|||",
    "DPOP||0|0|||",
    "DPOP||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-CORE||0|0|||",
    "OIDC-DISCOVERY||0|0|||",
    "OIDC-DISCOVERY||0|0|||",
    "OIDC-DYNAMIC-CLIENT-REGISTRATION||0|0|||",
    "RFC2119|normative|1|0|||",
    "RFC6749||0|0|||",
    "RFC6749||0|0|||",
    "RFC6749||0|0|||",
    "RFC6749||0|0|||",
    "RFC7517||0|0|||",
    "RFC7519||0|0|||",
    "RFC7591||0|0|||",
    "RFC7636||0|0|||",
    "RFC9110||0|0|||",
    "RFC9207||0|0|||",
    "RFC9700||0|0|||",
    "SOLID-OIDC-PRIMER||0|0|||",
    "SOLID-PROTOCOL||0|0|||",
    "UMA||0|0|||",
    "UMA||0|0|||",
    "WEBID||0|0|||",
  ],
  "definitions": [],
  "idlBlocks": [],
  "references": [],
}
`;

exports[`semantic round-trip (emit -> speculate) > preserves idl/dfn/ref/cite projections for webmcp > webmcp-emitter-diagnostics 1`] = `[]`;

exports[`semantic round-trip (emit -> speculate) > preserves idl/dfn/ref/cite projections for webmcp > webmcp-parsed-projection 1`] = `
{
  "cites": [
    "JSON-SCHEMA||0|0|||",
    "JSON-SCHEMA||0|0|||",
    "JSON-SCHEMA||0|0|||",
    "MCP||0|0|||",
    "RFC2119||1|0|||",
  ],
  "definitions": [
    "ModelContext/options|method|",
    "ModelContextClient|interface|",
    "ModelContextOptions|dictionary|",
    "ModelContextTool/annotations|field|",
    "ModelContextTool/description|field|",
    "ModelContextTool/execute|field|",
    "ModelContextTool/inputSchema|field|",
    "ModelContextTool/name|field|",
    "ModelContextTool|dictionary|",
    "ModelContext|interface|",
    "Navigator/a|method|",
    "Navigator/a|method|",
    "Navigator/a|method|",
    "Navigator|interface|",
    "ToolAnnotations/a|field|",
    "ToolAnnotations|dictionary|",
    "ToolExecuteCallback|typedef|",
    "UserInteractionCallback|typedef|",
    "agent|dfn|",
    "ai platform|dfn|",
    "browser’s agent|dfn|",
    "clearcontext()|method|modelcontext",
    "description|dfn|tool definition",
    "execute steps|dfn|tool definition",
    "input schema|dfn|tool definition",
    "internal context|dfn|modelcontext",
    "model context|dfn|",
    "modelcontext|attribute|navigator",
    "modelcontext|dfn|navigator",
    "name|dfn|tool definition",
    "providecontext(options)|method|modelcontext",
    "read-only hint|dfn|tool definition",
    "readonlyhint|dict-member|toolannotations",
    "registertool(tool)|method|modelcontext",
    "requestuserinteraction(callback)|method|modelcontextclient",
    "synthesize a declarative json schema object algorithm|dfn|",
    "tool definition|dfn|",
    "tool map|dfn|model context",
    "unregistertool(name)|method|modelcontext",
  ],
  "idlBlocks": [
    {
      "cites": [],
      "definitions": [
        "ModelContext/options|method|",
        "ModelContext|interface|",
      ],
      "references": [
        "externalIdlReference|DOMString|webidl|",
        "externalIdlReference|Exposed|webidl|",
        "externalIdlReference|SecureContext|webidl|",
        "externalIdlReference|Window|webidl|",
        "workspaceIdlReference|ModelContextOptions||",
        "workspaceIdlReference|ModelContextTool||",
      ],
      "value": "[Exposed=Window, SecureContext] interface ModelContext { <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-undefined" id="ref-for-idl-undefined">undefined</a> <a class="idl-code" data-link-type="method" href="#dom-modelcontext-providecontext" id="ref-for-dom-modelcontext-providecontext">provideContext</a>(optional <a data-link-type="idl-name" href="#dictdef-modelcontextoptions" id="ref-for-dictdef-modelcontextoptions">ModelContextOptions</a> options = {}); <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-undefined" id="ref-for-idl-undefined①">undefined</a> <a class="idl-code" data-link-type="method" href="#dom-modelcontext-clearcontext" id="ref-for-dom-modelcontext-clearcontext">clearContext</a>(); <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-undefined" id="ref-for-idl-undefined②">undefined</a> <a class="idl-code" data-link-type="method" href="#dom-modelcontext-registertool" id="ref-for-dom-modelcontext-registertool①">registerTool</a>(<a data-link-type="idl-name" href="#dictdef-modelcontexttool" id="ref-for-dictdef-modelcontexttool">ModelContextTool</a> tool); <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-undefined" id="ref-for-idl-undefined③">undefined</a> <a class="idl-code" data-link-type="method" href="#dom-modelcontext-unregistertool" id="ref-for-dom-modelcontext-unregistertool">unregisterTool</a>(<a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-DOMString" id="ref-for-idl-DOMString">DOMString</a> name); };",
    },
    {
      "cites": [],
      "definitions": [
        "ModelContextClient|interface|",
        "UserInteractionCallback|typedef|",
      ],
      "references": [
        "externalIdlReference|Exposed|webidl|",
        "externalIdlReference|Promise|webidl|",
        "externalIdlReference|Promise|webidl|",
        "externalIdlReference|SecureContext|webidl|",
        "externalIdlReference|Window|webidl|",
        "externalIdlReference|any|webidl|",
        "workspaceIdlReference|UserInteractionCallback||",
      ],
      "value": "[Exposed=Window, SecureContext] interface ModelContextClient { <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-promise" id="ref-for-idl-promise①">Promise</a>&lt;<a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-any" id="ref-for-idl-any①">any</a>&gt; <a class="idl-code" data-link-type="method" href="#dom-modelcontextclient-requestuserinteraction" id="ref-for-dom-modelcontextclient-requestuserinteraction">requestUserInteraction</a>(<a data-link-type="idl-name" href="#callbackdef-userinteractioncallback" id="ref-for-callbackdef-userinteractioncallback">UserInteractionCallback</a> callback); };callback UserInteractionCallback = Promise<any> ();",
    },
    {
      "cites": [],
      "definitions": [
        "ModelContextOptions|dictionary|",
      ],
      "references": [
        "workspaceIdlReference|ModelContextTool||",
      ],
      "value": "dictionary ModelContextOptions { <a data-link-type="dfn" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-sequence" id="ref-for-idl-sequence">sequence</a>&lt;<a data-link-type="idl-name" href="#dictdef-modelcontexttool" id="ref-for-dictdef-modelcontexttool①">ModelContextTool</a>&gt; tools = []; };",
    },
    {
      "cites": [],
      "definitions": [
        "ModelContextTool/annotations|field|",
        "ModelContextTool/description|field|",
        "ModelContextTool/execute|field|",
        "ModelContextTool/inputSchema|field|",
        "ModelContextTool/name|field|",
        "ModelContextTool|dictionary|",
        "ToolAnnotations/a|field|",
        "ToolAnnotations|dictionary|",
        "ToolExecuteCallback|typedef|",
      ],
      "references": [
        "externalIdlReference|DOMString|webidl|",
        "externalIdlReference|DOMString|webidl|",
        "externalIdlReference|Promise|webidl|",
        "externalIdlReference|boolean|webidl|",
        "externalIdlReference|object|webidl|",
        "workspaceIdlReference|ModelContextClient||",
        "workspaceIdlReference|ToolAnnotations||",
        "workspaceIdlReference|ToolExecuteCallback||",
      ],
      "value": "dictionary ModelContextTool { required <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-DOMString" id="ref-for-idl-DOMString①">DOMString</a> name; required <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-DOMString" id="ref-for-idl-DOMString②">DOMString</a> description; <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-object" id="ref-for-idl-object">object</a> inputSchema; required <a data-link-type="idl-name" href="#callbackdef-toolexecutecallback" id="ref-for-callbackdef-toolexecutecallback①">ToolExecuteCallback</a> execute; <a data-link-type="idl-name" href="#dictdef-toolannotations" id="ref-for-dictdef-toolannotations">ToolAnnotations</a> annotations; };dictionary ToolAnnotations { <a class="idl-code" data-link-type="interface" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#idl-boolean" id="ref-for-idl-boolean">boolean</a> <a class="idl-code" data-link-type="dict-member" href="#dom-toolannotations-readonlyhint" id="ref-for-dom-toolannotations-readonlyhint①">readOnlyHint</a> = false; };callback ToolExecuteCallback = Promise<any> (object input, ModelContextClient client);",
    },
    {
      "cites": [],
      "definitions": [
        "Navigator/a|method|",
        "Navigator/a|method|",
        "Navigator/a|method|",
        "Navigator|interface|",
      ],
      "references": [
        "externalIdlReference|SameObject|webidl|",
        "externalIdlReference|SecureContext|webidl|",
        "workspaceIdlReference|ModelContext||",
      ],
      "value": "partial interface Navigator { [<a class="idl-code" data-link-type="extended-attribute" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#SecureContext" id="ref-for-SecureContext">SecureContext</a>, <a class="idl-code" data-link-type="extended-attribute" data-xref-spec="webidl" href="https://webidl.spec.whatwg.org/#SameObject" id="ref-for-SameObject">SameObject</a>] readonly attribute <a data-link-type="idl-name" href="#modelcontext" id="ref-for-modelcontext①">ModelContext</a> <a class="idl-code" data-link-type="attribute" href="#dom-navigator-modelcontext" id="ref-for-dom-navigator-modelcontext">modelContext</a>; };",
    },
  ],
  "references": [
    "externalDfnReference|assistive technologies|aria|",
    "externalDfnReference|boolean|infra|",
    "externalDfnReference|boolean|webidl|",
    "externalDfnReference|form-associated elements|html|",
    "externalDfnReference|items|infra|",
    "externalDfnReference|items|infra|",
    "externalDfnReference|keys|infra|",
    "externalDfnReference|key|infra|",
    "externalDfnReference|map|infra|",
    "externalDfnReference|map|infra|",
    "externalDfnReference|strings|infra|",
    "externalDfnReference|string|infra|",
    "externalDfnReference|string|infra|",
    "externalDfnReference|string|infra|",
    "externalDfnReference|structs|infra|",
    "externalDfnReference|struct|infra|",
    "externalDfnReference|struct|infra|",
    "externalDfnReference|struct|infra|",
    "externalDfnReference|this|webidl|",
    "externalDfnReference|values|infra|",
    "externalIdlReference|DOMString|webidl|",
    "externalIdlReference|DOMString|webidl|",
    "externalIdlReference|DOMString|webidl|",
    "externalIdlReference|Exposed|webidl|",
    "externalIdlReference|Exposed|webidl|",
    "externalIdlReference|Promise|webidl|",
    "externalIdlReference|Promise|webidl|",
    "externalIdlReference|Promise|webidl|",
    "externalIdlReference|SameObject|webidl|",
    "externalIdlReference|SecureContext|webidl|",
    "externalIdlReference|SecureContext|webidl|",
    "externalIdlReference|SecureContext|webidl|",
    "externalIdlReference|Window|webidl|",
    "externalIdlReference|Window|webidl|",
    "externalIdlReference|any|webidl|",
    "externalIdlReference|boolean|webidl|",
    "externalIdlReference|object|webidl|",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|ai-platform||",
    "workspaceDfnReference|browsers-agent||",
    "workspaceDfnReference|model-context||",
    "workspaceDfnReference|navigator-modelcontext||",
    "workspaceDfnReference|synthesize-a-declarative-json-schema-object-algorithm||",
    "workspaceIdlReference|ModelContextClient||",
    "workspaceIdlReference|ModelContextOptions||",
    "workspaceIdlReference|ModelContextTool||",
    "workspaceIdlReference|ModelContextTool||",
    "workspaceIdlReference|ModelContext||",
    "workspaceIdlReference|ToolAnnotations||",
    "workspaceIdlReference|ToolExecuteCallback||",
    "workspaceIdlReference|UserInteractionCallback||",
  ],
}
`;

exports[`semantic round-trip (emit -> speculate) > preserves idl/dfn/ref/cite projections for webmcp > webmcp-source-projection 1`] = `
{
  "cites": [
    "JSON-SCHEMA||0|0|||",
    "JSON-SCHEMA||0|0|||",
    "JSON-SCHEMA||0|0|||",
    "MCP||0|0|||",
    "RFC2119|normative|1|0|||",
  ],
  "definitions": [
    "agent|dfn|",
    "ai platform|dfn|",
    "browser’s agent|dfn|",
    "clearcontext()|method|modelcontext",
    "description|dfn|tool definition",
    "execute steps|dfn|tool definition",
    "input schema|dfn|tool definition",
    "internal context|dfn|modelcontext",
    "model context|dfn|",
    "modelcontext|attribute|navigator",
    "modelcontext|dfn|navigator",
    "name|dfn|tool definition",
    "providecontext(options)|method|modelcontext",
    "read-only hint|dfn|tool definition",
    "readonlyhint|dict-member|toolannotations",
    "registertool(tool)|method|modelcontext",
    "requestuserinteraction(callback)|method|modelcontextclient",
    "synthesize a declarative json schema object algorithm|dfn|",
    "tool definition|dfn|",
    "tool map|dfn|model context",
    "unregistertool(name)|method|modelcontext",
  ],
  "idlBlocks": [
    {
      "cites": [],
      "definitions": [],
      "references": [
        "externalIdlReference|domstring|webidl|",
        "externalIdlReference|exposed|webidl|",
        "externalIdlReference|securecontext|webidl|",
        "externalIdlReference|undefined|webidl|",
        "externalIdlReference|undefined|webidl|",
        "externalIdlReference|undefined|webidl|",
        "externalIdlReference|undefined|webidl|",
        "workspaceDfnReference|modelcontextoptions||",
        "workspaceDfnReference|modelcontexttool||",
        "workspaceIdlReference|clearcontext||",
        "workspaceIdlReference|providecontext||",
        "workspaceIdlReference|registertool||",
        "workspaceIdlReference|unregistertool||",
      ],
      "value": "[Exposed=Window, SecureContext] interface ModelContext { undefined provideContext(optional ModelContextOptions options = {}); undefined clearContext(); undefined registerTool(ModelContextTool tool); undefined unregisterTool(DOMString name); };",
    },
    {
      "cites": [],
      "definitions": [],
      "references": [
        "externalIdlReference|any|webidl|",
        "externalIdlReference|any|webidl|",
        "externalIdlReference|exposed|webidl|",
        "externalIdlReference|promise|webidl|",
        "externalIdlReference|promise|webidl|",
        "externalIdlReference|securecontext|webidl|",
        "workspaceDfnReference|userinteractioncallback||",
        "workspaceIdlReference|requestuserinteraction||",
      ],
      "value": "[Exposed=Window, SecureContext] interface ModelContextClient { Promise<any> requestUserInteraction(UserInteractionCallback callback); }; callback UserInteractionCallback = Promise<any> ();",
    },
    {
      "cites": [],
      "definitions": [],
      "references": [
        "externalDfnReference|sequence|webidl|",
        "workspaceDfnReference|modelcontexttool||",
      ],
      "value": "dictionary ModelContextOptions { sequence<ModelContextTool> tools = []; };",
    },
    {
      "cites": [],
      "definitions": [],
      "references": [
        "externalIdlReference|any|webidl|",
        "externalIdlReference|boolean|webidl|",
        "externalIdlReference|domstring|webidl|",
        "externalIdlReference|domstring|webidl|",
        "externalIdlReference|object|webidl|",
        "externalIdlReference|object|webidl|",
        "externalIdlReference|promise|webidl|",
        "workspaceDfnReference|modelcontextclient||",
        "workspaceDfnReference|toolannotations||",
        "workspaceDfnReference|toolexecutecallback||",
        "workspaceIdlReference|readonlyhint||",
      ],
      "value": "dictionary ModelContextTool { required DOMString name; required DOMString description; object inputSchema; required ToolExecuteCallback execute; ToolAnnotations annotations; }; dictionary ToolAnnotations { boolean readOnlyHint = false; }; callback ToolExecuteCallback = Promise<any> (object input, ModelContextClient client);",
    },
    {
      "cites": [],
      "definitions": [],
      "references": [
        "externalIdlReference|navigator|html|",
        "externalIdlReference|sameobject|webidl|",
        "externalIdlReference|securecontext|webidl|",
        "workspaceDfnReference|modelcontext||",
        "workspaceIdlReference|modelcontext||",
      ],
      "value": "partial interface Navigator { [SecureContext, SameObject] readonly attribute ModelContext modelContext; };",
    },
  ],
  "references": [
    "externalDfnReference|assistive technologies|aria|",
    "externalDfnReference|boolean|infra|",
    "externalDfnReference|boolean|webidl|",
    "externalDfnReference|exists|infra|",
    "externalDfnReference|exists|infra|",
    "externalDfnReference|exists|infra|",
    "externalDfnReference|exist|infra|",
    "externalDfnReference|form-associated elements|html|",
    "externalDfnReference|form-associated elements|html|",
    "externalDfnReference|form|html|",
    "externalDfnReference|form|html|",
    "externalDfnReference|items|infra|",
    "externalDfnReference|items|infra|",
    "externalDfnReference|items|infra|",
    "externalDfnReference|keys|infra|",
    "externalDfnReference|key|infra|",
    "externalDfnReference|map|infra|",
    "externalDfnReference|map|infra|",
    "externalDfnReference|remove|infra|",
    "externalDfnReference|sequence|webidl|",
    "externalDfnReference|serializing a javascript value to a json string|infra|",
    "externalDfnReference|strings|infra|",
    "externalDfnReference|string|infra|",
    "externalDfnReference|string|infra|",
    "externalDfnReference|string|infra|",
    "externalDfnReference|structs|infra|",
    "externalDfnReference|struct|infra|",
    "externalDfnReference|struct|infra|",
    "externalDfnReference|struct|infra|",
    "externalDfnReference|this|webidl|",
    "externalDfnReference|this|webidl|",
    "externalDfnReference|this|webidl|",
    "externalDfnReference|this|webidl|",
    "externalDfnReference|throw|webidl|",
    "externalDfnReference|throw|webidl|",
    "externalDfnReference|throw|webidl|",
    "externalDfnReference|values|infra|",
    "externalIdlReference|any|webidl|",
    "externalIdlReference|any|webidl|",
    "externalIdlReference|any|webidl|",
    "externalIdlReference|boolean|webidl|",
    "externalIdlReference|domexception|webidl|",
    "externalIdlReference|domexception|webidl|",
    "externalIdlReference|domexception|webidl|",
    "externalIdlReference|domstring|webidl|",
    "externalIdlReference|domstring|webidl|",
    "externalIdlReference|domstring|webidl|",
    "externalIdlReference|exposed|webidl|",
    "externalIdlReference|exposed|webidl|",
    "externalIdlReference|invalidstateerror|webidl|",
    "externalIdlReference|invalidstateerror|webidl|",
    "externalIdlReference|invalidstateerror|webidl|",
    "externalIdlReference|navigator|html|",
    "externalIdlReference|navigator|html|",
    "externalIdlReference|navigator|html|",
    "externalIdlReference|navigator|html|",
    "externalIdlReference|navigator|html|",
    "externalIdlReference|object|webidl|",
    "externalIdlReference|object|webidl|",
    "externalIdlReference|promise|webidl|",
    "externalIdlReference|promise|webidl|",
    "externalIdlReference|promise|webidl|",
    "externalIdlReference|sameobject|webidl|",
    "externalIdlReference|securecontext|webidl|",
    "externalIdlReference|securecontext|webidl|",
    "externalIdlReference|securecontext|webidl|",
    "externalIdlReference|typeerror|webidl|",
    "externalIdlReference|undefined|webidl|",
    "externalIdlReference|undefined|webidl|",
    "externalIdlReference|undefined|webidl|",
    "externalIdlReference|undefined|webidl|",
    "workspaceDfnReference|agents||",
    "workspaceDfnReference|agents||",
    "workspaceDfnReference|agents||",
    "workspaceDfnReference|agents||",
    "workspaceDfnReference|agents||",
    "workspaceDfnReference|agents||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|agent||",
    "workspaceDfnReference|ai platforms||",
    "workspaceDfnReference|browser’s agents||",
    "workspaceDfnReference|description||",
    "workspaceDfnReference|execute steps||",
    "workspaceDfnReference|input schema||",
    "workspaceDfnReference|internal context||",
    "workspaceDfnReference|internal context||",
    "workspaceDfnReference|internal context||",
    "workspaceDfnReference|model context||",
    "workspaceDfnReference|model context||",
    "workspaceDfnReference|modelcontextclient||",
    "workspaceDfnReference|modelcontextoptions||",
    "workspaceDfnReference|modelcontexttool||",
    "workspaceDfnReference|modelcontexttool||",
    "workspaceDfnReference|modelcontext||",
    "workspaceDfnReference|modelcontext||",
    "workspaceDfnReference|name||",
    "workspaceDfnReference|read-only hint||",
    "workspaceDfnReference|synthesize a declarative json schema object algorithm||",
    "workspaceDfnReference|tool definition||",
    "workspaceDfnReference|tool definition||",
    "workspaceDfnReference|tool map||",
    "workspaceDfnReference|tool map||",
    "workspaceDfnReference|tool map||",
    "workspaceDfnReference|toolannotations||",
    "workspaceDfnReference|toolexecutecallback||",
    "workspaceDfnReference|userinteractioncallback||",
    "workspaceIdlReference|annotations||",
    "workspaceIdlReference|annotations||",
    "workspaceIdlReference|clearcontext()||",
    "workspaceIdlReference|clearcontext||",
    "workspaceIdlReference|description||",
    "workspaceIdlReference|description||",
    "workspaceIdlReference|description||",
    "workspaceIdlReference|execute||",
    "workspaceIdlReference|execute||",
    "workspaceIdlReference|inputschema||",
    "workspaceIdlReference|inputschema||",
    "workspaceIdlReference|inputschema||",
    "workspaceIdlReference|inputschema||",
    "workspaceIdlReference|inputschema||",
    "workspaceIdlReference|modelcontextclient||",
    "workspaceIdlReference|modelcontextclient||",
    "workspaceIdlReference|modelcontexttool||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|modelcontext||",
    "workspaceIdlReference|name||",
    "workspaceIdlReference|name||",
    "workspaceIdlReference|providecontext(options)||",
    "workspaceIdlReference|providecontext||",
    "workspaceIdlReference|readonlyhint||",
    "workspaceIdlReference|readonlyhint||",
    "workspaceIdlReference|registertool()||",
    "workspaceIdlReference|registertool(tool)||",
    "workspaceIdlReference|registertool||",
    "workspaceIdlReference|requestuserinteraction(callback)||",
    "workspaceIdlReference|requestuserinteraction||",
    "workspaceIdlReference|toolannotations||",
    "workspaceIdlReference|toolexecutecallback||",
    "workspaceIdlReference|tools||",
    "workspaceIdlReference|tools||",
    "workspaceIdlReference|unregistertool(name)||",
    "workspaceIdlReference|unregistertool||",
  ],
}
`;
